--- a/index.html
+++ b/index.html
@@ -2,49 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootswatch: Darkly</title>
+    <title>Candy is not a Programmer's Friend.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
-      <script src="../bower_components/respond/dest/respond.min.js"></script>
-    <![endif]-->
   </head>
-  <body>
+<body>
     <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand">Yasha Olatoto</div>
+        <div class="container">
+            <div class="navbar-header">
+                <a href class="navbar-brand">Yasha Olatoto</a>
+            </div>
+            <div class="navbar-collapse collapse" id="navbar-main">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
-          </ul>
+    </div>
 
+    <div class="container">
+        <div class="page-header" id="banner">
+            <div class="row">
+                <div class="col-lg-8 col-md-7 col-sm-6">
+                    <h1>Yasha Olatoto</h1>
+                </div>
+            </div>
+            <div class='row'>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                    <div class="jumbotron">
+                        <img src='assets/images/cats.jpg' width='270px' style='float:left; margin-right:20px'>
+                        <p>Hi, My name is Zimbabwe Jones. This is a placeholder bio while I do some other stuff.</p>
+                        <p>I like verbal bios as opposed to these static "profile" type bios. I feel they never convey the right thing. As such, I shall fill in the rest of this bio with Lorem Ipsum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tristique ante ac eleifend hendrerit. In nec sapien metus. Proin scelerisque erat at placerat facilisis. Mauris non augue ac massa rhoncus porttitor sed in est. Curabitur pellentesque tempus pellentesque. Vivamus diam ligula, tincidunt in enim eget, lobortis tempor risus. Aenean imperdiet dapibus dapibus. Nulla et auctor libero. Ut id ante nec ipsum blandit bibendum quis quis ipsum. Vivamus ut maximus metus. Suspendisse placerat sollicitudin nunc, sit amet posuere risus varius quis. Praesent vitae feugiat purus, vel laoreet massa. Nam tincidunt volutpat feugiat. In hac habitasse platea dictumst.</p>
+                        <p>Thus began my hatred of Santa Claus and his peers. If he had thought I would soon forgive him, he was gravely mistaken. I WILL ALWAYS STAND WITH HARAMBE!</p>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><center>Connect With Me!</center></h3>
+                        </div>
+                        <div class="panel-body">
+                            <center>
+                                <a href='https://www.github.com'><img src="assets/images/GitHub-Mark-64px.png" height='96px' width='96px'></a>
+                                <a href='https://www.linkedin.com'><img src="assets/images/linkedin.png" height='96px' width='96px'></a>
+                                <a href='https://www.stackoverflow.com'><img src="assets/images/so-icon.png" height='96px' width='96px'></a>
+                            </center>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-	<div class='container'>
-		<div class='bs-docs-section'>
-		<div class=row>
-			<div class='col-md-8'>
-				<div class='bs-component'>
-				<h2>Example body text</h2>
-				<p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-				<p><small>This line of text is meant to be treated as fine print.</small></p>
-				<p>The following snippet of text is <strong>rendered as bold text</strong>.</p>
-				<p>The following snippet of text is <em>rendered as italicized text</em>.</p>
-				<p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
-				</div>
-			</div>
-			<div class='col-md-4'>
-				<div class='bs-component'>
-				<h2>Example body text</h2>
-				<p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-				</div>
-			</div>
-		</div>
-		</div>
-	</div>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+</body>
+</html>
