--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,12 @@
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a href class="navbar-brand">Yasha Olatoto</a>
+                <a class="navbar-brand">Yasha Olatoto</a>
+                <button class='navbar-toggle' type='button' data-toggle='collapse' data-target='#navbar-main' aria-expanded='true'>
+                    <span class='icon-bar'></span>
+                    <span class='icon-bar'></span>
+                    <span class='icon-bar'></span>
+                </button>
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav navbar-right">
@@ -64,5 +69,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
